Fixed issue with spacing above user info on Activity

--- a/assets/src/scss/myfossil/_myfossil.scss
+++ b/assets/src/scss/myfossil/_myfossil.scss
@@ -499,6 +499,10 @@ $size-buddypress-header-padding		: 20px;
     text-align: center;
 }
 
+#user-info {
+    margin-top: 20px;
+}
+
 /*
  * Activity
  */
@@ -519,3 +523,4 @@ $size-buddypress-header-padding		: 20px;
         text-align: left;
     }
 }
+
